--- a/src/site.ejs
+++ b/src/site.ejs
@@ -124,8 +124,7 @@
                             <a class="block py-3 text-xl text-black hover:text-red-700" href="#menu">Nabídka</a>
                         </li>
                         <li class="mb-1">
-                            <a class="block py-3 text-xl text-black hover:text-red-700" href="#kde-nas-najdete">Kde nás
-                                najdete?</a>
+                            <a class="block py-3 text-xl text-black hover:text-red-700" href="#kde-nas-najdete">Kde nás najdete</a>
                         </li>
                     </ul>
                 </div>
@@ -450,13 +449,13 @@
                                 <path fill-rule="evenodd"
                                       d="M10 0l2.097 6.441h6.778l-5.487 3.988 2.097 6.442-5.485-3.989-5.488 3.989 2.097-6.442-5.488-3.988h6.779l2.097-6.441z" />
                             </svg>
-                            <span class="text-gray-700">4.8 / 5 <a
-                                        href="https://www.google.com/search?sa=X&sca_esv=f65ab4fb82876b19&tbm=lcl&sxsrf=ACQVn09bppIefKvX-aynKazRh2tdbockrg:1713795426632&q=Rest+Cafe+Recenze&rflfq=1&num=20&stick=H4sIAAAAAAAAAONgkxI2szQzsjQwNjczMza2NDU1Mjcx28DI-IpRMCi1uETBOTEtVSEoNTk1ryp1ESumGAC0yUOoQgAAAA&rldimm=6962903766339552746&hl=cs-CZ&ved=2ahUKEwj0v_y8gdaFAxWNh_0HHZrGB58Q9fQKegQIFxAF&biw=1920&bih=919&dpr=1#lkt=LocalPoiReviews"
-                                        target="_blank" class="underline">(239 hodnocení)</a>
+                            <span class="text-gray-700">5 / 5 <a
+                                        href="https://maps.app.goo.gl/VGFhZZgWP5eaNf8h6"
+                                        target="_blank" class="underline">(255 hodnocení)</a>
                         </span>
                         </div>
-                        <p class="text-gray-700"><span class="italic">"Skvělá kavárna s výbornou kávou (i horkou čokoládou) a naprosto vynikajícími dezerty"</span>
-                            <br> <span class="font-bold">-Magdalena</span></p>
+                        <p class="text-gray-700"><span class="italic">"Výborná káva i dezerty, krásné prostředí i atmosféra. Vždy milá obsluha, zejména sympatická blond slečna ze včerejšího rána, ráda se sem opakovaně vracím."</span>
+                            <br><br> <span class="font-bold mt-4">-Andrea Kalivodová</span></p>
                     </div>
                 </div>
                 <div class="swiper-slide">
@@ -466,13 +465,13 @@
                                 <path fill-rule="evenodd"
                                       d="M10 0l2.097 6.441h6.778l-5.487 3.988 2.097 6.442-5.485-3.989-5.488 3.989 2.097-6.442-5.488-3.988h6.779l2.097-6.441z" />
                             </svg>
-                            <span class="text-gray-700">4.5 / 5 <a
-                                        href="https://www.facebook.com/search/top/?q=Rest%20Cafe%20Recenze&epa=SEARCH_BOX"
-                                        target="_blank" class="underline">(123 hodnocení)</a>
+                            <span class="text-gray-700">5 / 5 <a
+                                        href="https://maps.app.goo.gl/6sUQbSp8PnrveQDb7"
+                                        target="_blank" class="underline">(255 hodnocení)</a>
                         </span>
                         </div>
-                        <p class="text-gray-700"><span class="italic">"Skvělé místo s přátelskou atmosférou a skvělým personálem"</span>
-                            <br> <span class="font-bold">-Jan</span></p>
+                        <p class="text-gray-700"><span class="italic">"Byl jsem zde poprvé a byla to velice příjemná zkušenost. Pěkné, klidné místečko s posezením. Za barem příjemná a ochotná obsluha se zájmem o zpětnou vazbu na produkty.<br>Doporučuji. :)"</span>
+                            <br><br> <span class="font-bold mt-4">-Daniel Ornst</span></p>
                     </div>
                 </div>
                 <div class="swiper-slide">
@@ -482,13 +481,13 @@
                                 <path fill-rule="evenodd"
                                       d="M10 0l2.097 6.441h6.778l-5.487 3.988 2.097 6.442-5.485-3.989-5.488 3.989 2.097-6.442-5.488-3.988h6.779l2.097-6.441z" />
                             </svg>
-                            <span class="text-gray-700">4.5 / 5 <a
-                                        href="https://www.facebook.com/search/top/?q=Rest%20Cafe%20Recenze&epa=SEARCH_BOX"
-                                        target="_blank" class="underline">(123 hodnocení)</a>
+                            <span class="text-gray-700">5 / 5 <a
+                                        href="https://maps.app.goo.gl/ZSzH1MHQbUvwz22q6"
+                                        target="_blank" class="underline">(255 hodnocení)</a>
                         </span>
                         </div>
-                        <p class="text-gray-700"><span class="italic">"Skvělé místo s přátelskou atmosférou a skvělým personálem"</span>
-                            <br> <span class="font-bold">-Jan</span></p>
+                        <p class="text-gray-700"><span class="italic">"Velmi pěkné místo, přátelský personál. Vynikající cappuccino."</span>
+                            <br><br> <span class="font-bold mt-4">-Claudio Corti</span></p>
                     </div>
                 </div>
                 <div class="swiper-slide">
@@ -498,13 +497,13 @@
                                 <path fill-rule="evenodd"
                                       d="M10 0l2.097 6.441h6.778l-5.487 3.988 2.097 6.442-5.485-3.989-5.488 3.989 2.097-6.442-5.488-3.988h6.779l2.097-6.441z" />
                             </svg>
-                            <span class="text-gray-700">4.5 / 5 <a
-                                        href="https://www.facebook.com/search/top/?q=Rest%20Cafe%20Recenze&epa=SEARCH_BOX"
-                                        target="_blank" class="underline">(123 hodnocení)</a>
+                            <span class="text-gray-700">5 / 5 <a
+                                        href="https://maps.app.goo.gl/RQPyTyNHF6zLQqL47"
+                                        target="_blank" class="underline">(255 hodnocení)</a>
                         </span>
                         </div>
-                        <p class="text-gray-700"><span class="italic">"Nejlepší káva od asijského prince"</span>
-                            <br> <span class="font-bold">-Jan</span></p>
+                        <p class="text-gray-700"><span class="italic">"Velmi chutná káva ☕️"</span>
+                            <br><br> <span class="font-bold mt-4">-Darya Kruhlyak</span></p>
                     </div>
                 </div>
                 <div class="swiper-slide">
@@ -514,13 +513,93 @@
                                 <path fill-rule="evenodd"
                                       d="M10 0l2.097 6.441h6.778l-5.487 3.988 2.097 6.442-5.485-3.989-5.488 3.989 2.097-6.442-5.488-3.988h6.779l2.097-6.441z" />
                             </svg>
-                            <span class="text-gray-700">4.5 / 5 <a
-                                        href="https://www.facebook.com/search/top/?q=Rest%20Cafe%20Recenze&epa=SEARCH_BOX"
-                                        target="_blank" class="underline">(123 hodnocení)</a>
+                            <span class="text-gray-700">5 / 5 <a
+                                        href="https://maps.app.goo.gl/zutgLmp46FtCXqo16"
+                                        target="_blank" class="underline">(255 hodnocení)</a>
                         </span>
                         </div>
-                        <p class="text-gray-700"><span class="italic">"Peckovní kávička "</span>
-                            <br> <span class="font-bold">-Jan</span></p>
+                        <p class="text-gray-700"><span class="italic">"Skvělá káva a výborné dortíky. Na Václaváku rozhodně nejpříjemnější a nejlevnější volba."</span>
+                            <br><br> <span class="font-bold mt-4">-Kateřina Rosívalová</span></p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="bg-white rounded-lg shadow-md p-6 md:ml-4">
+                        <div class="flex items-center mb-2">
+                            <svg viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4 text-yellow-500 mr-1">
+                                <path fill-rule="evenodd"
+                                      d="M10 0l2.097 6.441h6.778l-5.487 3.988 2.097 6.442-5.485-3.989-5.488 3.989 2.097-6.442-5.488-3.988h6.779l2.097-6.441z" />
+                            </svg>
+                            <span class="text-gray-700">5 / 5 <a
+                                        href="https://maps.app.goo.gl/NWG1STcbgJFzynZcA"
+                                        target="_blank" class="underline">(255 hodnocení)</a>
+                        </span>
+                        </div>
+                        <p class="text-gray-700"><span class="italic">"Horká čokoláda byla úžasná, podle mého názoru stojí za návštěvu"</span>
+                            <br><br> <span class="font-bold mt-4">-Paddy</span></p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="bg-white rounded-lg shadow-md p-6 md:ml-4">
+                        <div class="flex items-center mb-2">
+                            <svg viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4 text-yellow-500 mr-1">
+                                <path fill-rule="evenodd"
+                                      d="M10 0l2.097 6.441h6.778l-5.487 3.988 2.097 6.442-5.485-3.989-5.488 3.989 2.097-6.442-5.488-3.988h6.779l2.097-6.441z" />
+                            </svg>
+                            <span class="text-gray-700">5 / 5 <a
+                                        href="https://maps.app.goo.gl/Yr5WpYAgmo1R1NMX6"
+                                        target="_blank" class="underline">(255 hodnocení)</a>
+                        </span>
+                        </div>
+                        <p class="text-gray-700"><span class="italic">"Vynikající snídaně, vynikající cappuccino a dezerty."</span>
+                            <br><br> <span class="font-bold mt-4">-Gio Zampa</span></p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="bg-white rounded-lg shadow-md p-6 md:ml-4">
+                        <div class="flex items-center mb-2">
+                            <svg viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4 text-yellow-500 mr-1">
+                                <path fill-rule="evenodd"
+                                      d="M10 0l2.097 6.441h6.778l-5.487 3.988 2.097 6.442-5.485-3.989-5.488 3.989 2.097-6.442-5.488-3.988h6.779l2.097-6.441z" />
+                            </svg>
+                            <span class="text-gray-700">5 / 5 <a
+                                        href="https://maps.app.goo.gl/o4LQtT27EhTmABCk8"
+                                        target="_blank" class="underline">(255 hodnocení)</a>
+                        </span>
+                        </div>
+                        <p class="text-gray-700"><span class="italic">"Kdybych mohl dát 6 hvězdiček, dal bych. Nejlepší filtrovaná káva v centru města."</span>
+                            <br><br> <span class="font-bold mt-4">-Sebastian Toplak</span></p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="bg-white rounded-lg shadow-md p-6 md:ml-4">
+                        <div class="flex items-center mb-2">
+                            <svg viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4 text-yellow-500 mr-1">
+                                <path fill-rule="evenodd"
+                                      d="M10 0l2.097 6.441h6.778l-5.487 3.988 2.097 6.442-5.485-3.989-5.488 3.989 2.097-6.442-5.488-3.988h6.779l2.097-6.441z" />
+                            </svg>
+                            <span class="text-gray-700">5 / 5 <a
+                                        href="https://maps.app.goo.gl/FeHJXnP8YXMJtM9m9"
+                                        target="_blank" class="underline">(255 hodnocení)</a>
+                        </span>
+                        </div>
+                        <p class="text-gray-700"><span class="italic">"Výborné kafe a milá obsluha. Určitě se vrátím! 👍"</span>
+                            <br><br> <span class="font-bold mt-4">-Tonda Šimůnek</span></p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="bg-white rounded-lg shadow-md p-6 md:ml-4">
+                        <div class="flex items-center mb-2">
+                            <svg viewBox="0 0 20 20" fill="currentColor" class="w-4 h-4 text-yellow-500 mr-1">
+                                <path fill-rule="evenodd"
+                                      d="M10 0l2.097 6.441h6.778l-5.487 3.988 2.097 6.442-5.485-3.989-5.488 3.989 2.097-6.442-5.488-3.988h6.779l2.097-6.441z" />
+                            </svg>
+                            <span class="text-gray-700">5 / 5 <a
+                                        href="https://maps.app.goo.gl/x1xnXPtcv7w5gmsr9"
+                                        target="_blank" class="underline">(255 hodnocení)</a>
+                        </span>
+                        </div>
+                        <p class="text-gray-700"><span class="italic">"Moc doporučuji velmi milá obsluha, a pán velmi příjemný, a ochotný a hlavně usměvavý  což v dnešní době není časté, je vidět že ho to baví"</span>
+                            <br><br> <span class="font-bold mt-4">-Nicol Králová</span></p>
                     </div>
                 </div>
             </div>
