--- a/src/site.ejs
+++ b/src/site.ejs
@@ -160,7 +160,7 @@
     </div>
 </section>
 
-<div class="max-w-screen-xl mx-auto px-4 mt-10 md:mt-14 lg:mt-20 justify-center items-center">
+<div class="max-w-screen-xl mx-auto px-4 mt-16 lg:mt-20 justify-center items-center">
     <!-- KDO JSME? -->
     <section class="py-2" id="o-nas">
         <!-- HEADING -->
@@ -178,12 +178,13 @@
             <div class="container flex flex-col md:flex-row items-center justify-center">
                 <!-- obrázek-->
                 <div class="flex flex-grow-0 flex-shrink-0 basis-[60%] justify-center z-10 mb-10 md:m-0 lg:mb-0">
-                    <img class="sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="image/picture-1.jpg" alt="">
+                    <img class="sm:w-3/4 sm:h-3/4 md:w-full md:h-full lg:w-auto lg:h-[580px]"
+                         src="image/picture-3.jpg" alt="">
                 </div>
                 <!-- CONTENT -->
                 <div class="flex flex-grow-0 flex-shrink-0 basis-[40%] flex-col items-center lg:ml-8 lg:max-w-[380px]">
-                    <h1 class="text-3xl text-bookmark-blue">Text 1</h1>
-                    <p class="text-sm lg:text-base text-black text-left my-4 sm:w-3/4 lg:w-full">
+                    <h1 class="text-3xl text-bookmark-blue">Text 3</h1>
+                    <p class="text-sm lg:text-base text-black my-4 text-left sm:w-3/4 lg:w-full">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem earum quidem dolor
                         necessitatibus modi ab sed illum? Beatae iste doloremque illo.Lorem ipsum dolor sit amet,
                         consectetur adipisicing elit. Eos dolorem earum quidem dolor
@@ -191,6 +192,7 @@
                     </p>
                 </div>
             </div>
+
         </div>
         <!--FEATURES - feature n2-->
         <div class="relative mt-20 lg:mt-24">
@@ -214,17 +216,17 @@
 
         </div>
         <!--FEATURES - feature n3-->
+
         <div class="relative mt-20 lg:mt-24">
             <div class="container flex flex-col md:flex-row items-center justify-center">
                 <!-- obrázek-->
                 <div class="flex flex-grow-0 flex-shrink-0 basis-[60%] justify-center z-10 mb-10 md:m-0 lg:mb-0">
-                    <img class="sm:w-3/4 sm:h-3/4 md:w-full md:h-full lg:w-auto lg:h-[580px]"
-                         src="image/picture-3.jpg" alt="">
+                    <img class="sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="image/picture-1.jpg" alt="">
                 </div>
                 <!-- CONTENT -->
                 <div class="flex flex-grow-0 flex-shrink-0 basis-[40%] flex-col items-center lg:ml-8 lg:max-w-[380px]">
-                    <h1 class="text-3xl text-bookmark-blue">Text 3</h1>
-                    <p class="text-sm lg:text-base text-black my-4 text-left sm:w-3/4 lg:w-full">
+                    <h1 class="text-3xl text-bookmark-blue">Text 1</h1>
+                    <p class="text-sm lg:text-base text-black text-left my-4 sm:w-3/4 lg:w-full">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem earum quidem dolor
                         necessitatibus modi ab sed illum? Beatae iste doloremque illo.Lorem ipsum dolor sit amet,
                         consectetur adipisicing elit. Eos dolorem earum quidem dolor
@@ -232,14 +234,13 @@
                     </p>
                 </div>
             </div>
-
         </div>
 
     </section>
 </div>
 
 
-<div class="menu flex container mx-auto mt-10 md:mt-14 lg:mt-20">
+<div class="menu flex container mx-auto mt-16 lg:mt-20">
     <section class="items-center flex flex-col mx-auto w-full" id="menu">
         <div
                 class="flex space-x-2 border-[3px] border-rose-800 rounded-xl select-none w-72 sm:w-127 h-12 sm:h-16 lg:h-16"
@@ -435,7 +436,7 @@
 
 
 <section
-        class="bg-gradient-to-b from-red-800 to-gradient-red-dark pt-16 pb-7 mt-10 md:mt-14 container lg:mt-20 relative overflow-hidden"
+        class="bg-gradient-to-b from-red-800 to-gradient-red-dark pt-16 pb-7 mt-16 container lg:mt-20 relative overflow-hidden"
         id="reviews">
     <div class="max-w-7xl mx-auto px-4">
         <h2 class="text-3xl font-bold mb-4 text-center text-white">Naše hodnocení</h2>
@@ -632,7 +633,7 @@
 
 
 
-<section class="bg-white mt-10 md:mt-14 lg:mt-20" id="kde-nas-najdete">
+<section class="bg-white mt-16 lg:mt-20" id="kde-nas-najdete">
     <div class="max-w-7xl mx-auto md:px-4">
         <h2 class="text-3xl text-black font-bold mb-4 text-center">Kde nás najdete</h2>
         <div class="flex flex-col text-black items-center mb-8 mt-[1rem]">
@@ -647,7 +648,7 @@
     </div>
 </section>
 
-<footer class="bg-gradient-to-b from-red-800 to-gradient-red-dark mt-10 md:mt-14 lg:mt-20">
+<footer class="bg-gradient-to-b from-red-800 to-gradient-red-dark mt-16 lg:mt-20">
     <div class="px-4 pt-16 mx-auto w-11/12 md:max-w-full lg:max-w-screen-xl lg:px-8">
         <div class="flex flex-col md:flex-row md:justify-between md:items-center mb-8 ">
             <div class="sm:col-span-1 mb-8 md:mb-0">
