--- a/src/site.ejs
+++ b/src/site.ejs
@@ -75,7 +75,8 @@
             <ul id="list-items-burger" class="hidden top-1/2 ml-auto md:flex md:flex md:items-center md:space-x-6">
                 <li><a class="text-xl text-white hover:text-red-700 custom-underline" href="#o-nas">O nás</a></li>
                 <li><a class="text-xl text-white hover:text-red-700 custom-underline" href="#menu">Nabídka</a></li>
-                <li><a class="text-xl text-white hover:text-red-700 custom-underline" href="#kde-nas-najdete">Kde nás najdete</a></li>
+                <li><a class="text-xl text-white hover:text-red-700 custom-underline" href="#kde-nas-najdete">Kde nás
+                        najdete</a></li>
             </ul>
             <div class="flex items-center ml-4 gap-2 hidden md:flex">
                 <a href="https://www.instagram.com/restcafe.cz/"
@@ -124,7 +125,8 @@
                             <a class="block py-3 text-xl text-black hover:text-red-700" href="#menu">Nabídka</a>
                         </li>
                         <li class="mb-1">
-                            <a class="block py-3 text-xl text-black hover:text-red-700" href="#kde-nas-najdete">Kde nás najdete</a>
+                            <a class="block py-3 text-xl text-black hover:text-red-700" href="#kde-nas-najdete">Kde nás
+                                najdete</a>
                         </li>
                     </ul>
                 </div>
@@ -155,7 +157,7 @@
     <div class="container relative items-center flex flex-col justify-center py-12 sm:pt-20">
         <h1 class="text-4xl md:text-5xl lg:text-6xl xl:text-7xl font-bold text-center text-white z-10">Rest Cafe</h1>
         <p class="text-lg md:text-xl lg:text-2xl xl:text-3xl text-center mt-4 px-4 md:px-0 text-white z-10">
-            Rest Cafe se rozjela před třemi lety a od té doby jsme prošli řadou výzev, zejména během karantény. S hrdostí můžeme říci, že jsme tyto obtíže překonali a jsme připraveni pokračovat v poskytování skvělého servisu. Jsme tu, abychom vám každý den přinášeli radost prostřednictvím našich výrobků a úsměvu na tváři.
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
         </p>
     </div>
 </section>
@@ -165,12 +167,12 @@
     <section class="py-2" id="o-nas">
         <!-- HEADING -->
         <div class=" sm:w-3/4 lg:w-9/12 mx-auto px-2">
-            <h1 class="text-3xl text-center text-bookmark-blue">O Nás</h1>
+            <h1 class="text-3xl text-center text-bookmark-blue">O nás</h1>
             <p class="text-center text-sm lg:text-base text-black mt-4">
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque tincidunt scelerisque libero. Etiam
-                bibendum elit eget erat. Nunc dapibus tortor vel mi dapibus sollicitudin.
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque tincidunt scelerisque libero. Etiam
-                bibendum elit eget erat. Nunc dapibus tortor vel mi dapibus sollicitudin.
+                Rest Cafe, na Václavském náměstí je jedinečným místem v srdci Prahy, které spojuje pohodlné posezení s
+                vynikající výběrovou kávou na mlynku od pražírny Fathers z Ostravy. Tato kavárna vyniká nejen svou
+                výbornou kávou, ale i svou příjemnou vnitřní atmosférou a přátelským mladým kolektivem, který vytváří
+                ideální prostředí pro setkání s přáteli, práci na počítači nebo prosté relaxaci.
             </p>
         </div>
         <!--FEATURES - feature n1-->
@@ -183,12 +185,10 @@
                 </div>
                 <!-- CONTENT -->
                 <div class="flex flex-grow-0 flex-shrink-0 basis-[40%] flex-col items-center lg:ml-8 lg:max-w-[380px]">
-                    <h1 class="text-3xl text-bookmark-blue">Text 3</h1>
                     <p class="text-sm lg:text-base text-black my-4 text-left sm:w-3/4 lg:w-full">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem earum quidem dolor
-                        necessitatibus modi ab sed illum? Beatae iste doloremque illo.Lorem ipsum dolor sit amet,
-                        consectetur adipisicing elit. Eos dolorem earum quidem dolor
-                        necessitatibus modi ab sed illum? Beatae iste doloremque illo.
+                        Rest Cafe se rozjela před třemi lety a od té doby jsme prošli řadou výzev, zejména během karantény. S
+                        hrdostí můžeme říci, že jsme tyto obtíže překonali a jsme připraveni pokračovat v poskytování skvělého
+                        servisu. Jsme tu, abychom vám každý den přinášeli radost prostřednictvím našich výrobků a úsměvu na tváři.
                     </p>
                 </div>
             </div>
@@ -204,12 +204,10 @@
                 </div>
                 <!-- CONTENT -->
                 <div class="flex flex-1 flex-col items-center lg:max-w-[480px]">
-                    <h1 class="text-3xl text-bookmark-blue">Text 2</h1>
                     <p class="text-sm lg:text-base text-black my-4 text-left sm:w-3/4 lg:w-full">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates sit eum, distinctio
-                        illo dicta beatae dolore voluptatum accusamus. Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Quis voluptates sit eum, distinctio
-                        illo dicta beatae dolore voluptatum accusamus.
+                        U nás také najdete i široký výběr čerstvých dezertů některé i bez lepku, veganske, slaných
+                        quichů a bez konkurenčních koláčů. Vstřícný personál je vždy připraven vám pomoct s výběrem,
+                        nebo poradit s výběrem kávových specialit.
                     </p>
                 </div>
             </div>
@@ -225,12 +223,11 @@
                 </div>
                 <!-- CONTENT -->
                 <div class="flex flex-grow-0 flex-shrink-0 basis-[40%] flex-col items-center lg:ml-8 lg:max-w-[380px]">
-                    <h1 class="text-3xl text-bookmark-blue">Text 1</h1>
                     <p class="text-sm lg:text-base text-black text-left my-4 sm:w-3/4 lg:w-full">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem earum quidem dolor
-                        necessitatibus modi ab sed illum? Beatae iste doloremque illo.Lorem ipsum dolor sit amet,
-                        consectetur adipisicing elit. Eos dolorem earum quidem dolor
-                        necessitatibus modi ab sed illum? Beatae iste doloremque illo.
+                        V naší kavárně se neustále snažíme vylepšovat sortiment dezertů a snažíme se přizpůsobovat
+                        požadavkům našich zákazníků. S příchodem každého ročního období můžete očekávat nejen sezónní
+                        kávové speciality, ale také nekávové nápoje, které obohatí naši nabídku. Přijďte a zjistěte, co
+                        jsme pro vás připravili.
                     </p>
                 </div>
             </div>
@@ -611,13 +608,14 @@
 <% if (imageData && imageData.length > 0) { %>
     <section class="max-w-screen-xl mx-auto px-6">
         <h1 class="text-3xl font-bold mb-4">Instagram Photos</h1>
-        
+
         <ul class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mx-auto">
             <% imageData.filter(image => image.media_type !== 'VIDEO').slice(0, 8).forEach(image => { %>
                 <li class="relative group">
                     <div class="overflow-hidden rounded-lg shadow-lg">
                         <a href="<%= image.permalink %>" target="_blank" class="block">
-                            <img src="<%= image.media_url %>" alt="<%= image.caption %>" class="w-full h-full transition duration-300 transform group-hover:scale-105">
+                            <img src="<%= image.media_url %>" alt="<%= image.caption %>"
+                                 class="w-full h-full transition duration-300 transform group-hover:scale-105">
                             <div class="absolute top-0 left-0 w-full h-full bg-black opacity-0 group-hover:opacity-75 flex items-center justify-center text-white transition duration-300">
                                 <p class="text-center p-4"><%= image.caption %></p>
                             </div>
@@ -628,10 +626,6 @@
         </ul>
     </section>
 <% } %>
-
-
-
-
 
 <section class="bg-white mt-16 lg:mt-20" id="kde-nas-najdete">
     <div class="max-w-7xl mx-auto md:px-4">
