--- a/src/site.ejs
+++ b/src/site.ejs
@@ -670,7 +670,7 @@
                 <p class="text-lg font-bold tracking-wide text-white md:ml-10">Kontakt</p>
                 <div class="flex">
                     <img class="hidden md:flex h-6 mr-4" src="svg/phone.svg" alt="">
-                    <p class="mr-1 text-white">Phone:</p>
+                    <p class="mr-1 text-white">Telefon:</p>
                     <a href="tel:123-456-789" aria-label="Our phone" title="Our phone"
                        class="text-white custom-underline custom-underline-footer">+420
                         123 456 789</a>
