--- a/src/site.ejs
+++ b/src/site.ejs
@@ -656,7 +656,7 @@
                 <div class="flex flex-col">
                     <div class="flex items-center">
                         <img class="hidden md:flex h-6 mr-4" src="svg/clock.svg" alt="">
-                        <p class="mr-1 text-white">PO-PÁ: 7:00h - 19:30h</p>
+                        <p class="mr-1 text-white">PO - PÁ: 7:00h - 19:30h</p>
                     </div>
                     <div class="flex">
                         <p class="mr-1 text-white md:ml-10">SO: 9:00h - 19:30h</p>
@@ -684,7 +684,7 @@
                 <div class="flex">
                     <img class="hidden md:flex h-6 mr-4" src="svg/location.svg" alt="">
                     <p class="mr-1 text-white">Adresa:</p>
-                    <a href="https://www.google.com/maps/place/Rest+Cafe/@50.0827484,14.4241915,17z/data=!3m1!4b1!4m6!3m5!1s0x470b954ba8aaa593:0x60a134159de605ea!8m2!3d50.082745!4d14.4267664!16s%2Fg%2F11r4ryjcq8?entry=ttu"
+                    <a href="https://maps.app.goo.gl/xMSXBR37GzEYDSbZ8"
                        target="_blank" rel="noopener noreferrer" aria-label="Our address" title="Our address"
                        class="text-white custom-underline custom-underline-footer">
                         Jindřišská 2, 110 00, Praha 1
